<resources>
    <string name="app_name">YunaTube</string>
    <string name="title_activity_main">YunaTube</string>
    <string name="app_version">3.4.0</string>
    <string name="app_version_date">20140120</string>
    <string name="lo">1</string>
    <string name="language">en</string>
    <string name="back">Back</string>
    <string name="loading">Loading...</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="korean">한국어</string>
    <string name="message_will_translate">This page will be translated soon.</string>
    <string name="message_back_pressed">Press Back button if you want to exit</string>
    <string name="message_network_unavailable">There\'s no network connection right now.\nPlease try again later!</string>
    <string name="message_server_unavailable">Oops, something bad happened when retrieving data from the server.\nPlease try again later!</string>
    <string name="message_rate_yunatube">Can you spare a few seconds to evaluate YunaTube on Google Play? Thank you for your support and feedback!</string>
    <string name="message_enter_data">Please enter something!</string>
    <string name="actionbar_search">Search</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_search_hint">Enter a keyword</string>
    <string name="actionbar_nickname">Set a nickname</string>
    <string name="actionbar_save">Save</string>
    <string name="actionbar_write">Write</string>
    <string name="actionbar_refresh">Refresh</string>
    <string name="actionbar_share">Share</string>
    <string name="actionbar_share_with">Share with…</string>
    <string name="notification_canceled">Push notification is disabled.</string>
    <string name="notification_set">Push notification is enabled.</string>
	<string name="dday_event">%1$s days until Skate Canada.</string>
    <string name="dday_sochi">D-%1$s</string>
    <string name="today_fact_title">Today\'s Yuna Fact</string>
    <string name="today_fact_more_title">More ></string>
    <string name="new_videos_title">New Videos</string>
    <string name="hot_news_title">Hot News</string>
    <string name="main_slider_guide_notice">Image will disappear when you touch it.</string>
    <string name="today_picture_title">Today\'s Photo</string>
    <string name="today_picture_save">Tap the image to save.</string>
    <string name="today_picture_save_confirm">Do you want to save this image?</string>
    <string name="rate_yunatube_title">Rate YunaTube!</string>
    <string name="rate_later">Rate later</string>
    <string name="search_direction">Find Yuna\'s Videos</string>
    <string name="search_keyword">Enter a keyword.</string>
    <string name="search_no_results">No results found.\nTry with a different keyword.</string>
    <string name="settings_user">User</string>
    <string name="settings_set_username">Set Username</string>
    <string name="settings_app">App Settings</string>
    <string name="settings_receive_push">Receive Push Notifications</string>
    <string name="settings_thoughts">Your Thoughts</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_googleplay">Rate YunaTube app!</string>
    <string name="settings_message">YunaTube is dedicated to the one and only champion, Queen Yuna! \nWe ♥ Yuna from the bottom of our hearts!</string>
    <string name="settings_by">Developer: Toronto Dhole\nIllustrator: Leoniie Waffle, 2RioN\nCalligrapher: Nanalogue J</string>
    <string name="feedback_email">paul@paulshin.ca</string>
    <string name="feedback_subject">Feedback on YunaTube!</string>
    <string name="feedback_text"></string>
    <string name="feedback_chooser">Send Feedback</string>
    <string name="nickname_set">Set a nickname</string>
    <string name="nickname_desc">Your nickname will be used when you post comment to YouTube or send a message for Yuna.</string>
    <string name="nickname_length">You can use up to 10 characters.</string>
    <string name="nickname_successful">Your new nickname is successfully set.</string>
    <string name="nickname_noname">Dhole</string>
    <string name="nickname_must">Please set your own nickname in order to continue.</string>
    <string name="jukebox_notice_2">YouTube clips will play in a loop. However, due to the restrictions of YouTube, the jukebox will not play if the app is closed or the screen is turned off or there is no internet connection.</string>
    <string name="game_score_replay">Play Again</string>
    <string name="game_score_rank">Check Rank</string>
    <string name="game_score_earned">You just scored %1$d points!</string>
    <string name="game_hint">Hint</string>
    <string name="game_hint_label">Hint - %1$d</string>
    <string name="game_hint_remaining">You have %1$d chances remaining.</string>
    <string name="game_hint_nomore">You can\'t use hint anymore. Trust your instinct!</string>
    <string name="game_intro">For those bored dholes, we brought a fun game! This is so-called matching pictures game. There are 8 pairs of Yuna pictures shuffled in a grid. You can only see the whole pictures in the first 5 seconds and while using 2 hint chances. The less you use the hint chances and make wrong attempts, the more points you will score. Of course, finding pairs as quickly as possible is the key! You can simply start the game by touching the screen. The 20 set stage has 1.8 times more factor than the 16 set stage.\n\nR U READY?</string>
    <string name="supermenu_home">Home</string>
    <string name="supermenu_about_yuna">About Yuna</string>
    <string name="supermenu_about_yuna_desc">Yuna\'s profile</string>
    <string name="supermenu_yuna_news">Yuna News</string>
    <string name="supermenu_yuna_news_desc">Search for Yuna news</string>
    <string name="supermenu_youtube">YouTube</string>
    <string name="supermenu_youtube_desc">YouTube clips of Yuna</string>
    <string name="supermenu_album">Album</string>
    <string name="supermenu_album_desc">Photo collections of Yuna</string>
    <string name="supermenu_gif">Animations</string>
    <string name="supermenu_gif_desc">Collection of GIF files</string>
    <string name="supermenu_search">Yuna on the Web</string>
    <string name="supermenu_search_desc">Search for Yuna on the Web</string>
    <string name="supermenu_links">Family Sites</string>
    <string name="supermenu_links_desc">Websites about Yuna &amp; skating</string>
    <string name="supermenu_message">Yuna, I ♥ You!</string>
    <string name="supermenu_message_desc">Send your ♥ to Yuna!</string>
    <string name="supermenu_survey">Survey</string>
    <string name="supermenu_survey_desc">Show your thoughts!</string>
    <string name="supermenu_quiz">Quiz Room</string>
    <string name="supermenu_quiz_desc">How much u kno about her?</string>
    <string name="supermenu_chat">Chat Room</string>
    <string name="supermenu_chat_desc">Let\'s chat!</string>
    <string name="supermenu_game">Finding Yuna</string>
    <string name="supermenu_game_desc">Wanna play a game?</string>
    <string name="submenu_about_yuna_profile">Profile</string>
    <string name="submenu_about_yuna_profile_desc">Yuna\'s brief info.</string>
    <string name="submenu_about_yuna_yunakimcom">www.YUNAKIM.com</string>
    <string name="submenu_about_yuna_yunakimcom_desc">Yuna\'s official website</string>
    <string name="submenu_about_yuna_questions">20Q 20A</string>
    <string name="submenu_about_yuna_questions_desc">Questions and Answers</string>
    <string name="submenu_about_yuna_wikipedia">Wikipedia</string>
    <string name="submenu_about_yuna_wikipedia_desc">View Wikipedia</string>
    <string name="submenu_about_yuna_programs">Programs</string>
    <string name="submenu_about_yuna_programs_desc">Yuna\'s masterpieces</string>
    <string name="submenu_about_yuna_isu_records">Official Records</string>
    <string name="submenu_about_yuna_isu_records_desc">ISU competition scores</string>
    <string name="submenu_about_yuna_results">Competitions</string>
    <string name="submenu_about_yuna_results_desc">Yuna\'s competition results</string>
    <string name="submenu_about_yuna_awards">Awards</string>
    <string name="submenu_about_yuna_awards_desc">Yuna\'s awards data</string>
    <string name="submenu_about_yuna_charities">Charities</string>
    <string name="submenu_about_yuna_charities_desc">Yuna\'s humanitarian activities</string>
    <string name="submenu_about_yuna_praises">Praises</string>
    <string name="submenu_about_yuna_praises_desc">How the world thinks about Yuna</string>
    <string name="profile_born">&lt;b&gt;Born: &lt;/b&gt; September 5, 1990</string>
    <string name="profile_nationality">&lt;b&gt;Nationality: &lt;/b&gt; Korea</string>
    <string name="profile_occupation">&lt;b&gt;Occupation: &lt;/b&gt; Figure Skater</string>
    <string name="profile_height">&lt;b&gt;Height: &lt;/b&gt; 164cm (5ft 4.5in)</string>
    <string name="profile_base">&lt;b&gt;Training Base: &lt;/b&gt; Taeneung Athlete Village</string>
    <string name="profile_agent">&lt;b&gt;Agent: &lt;/b&gt; All That Sports</string>
    <string name="profile_family">&lt;b&gt;Family: &lt;/b&gt; Father, Mother, Elder sister and two dogs</string>
    <string name="profile_titles">&lt;b&gt;Major Titles: &lt;/b&gt; 2010 Vancouver Olympic Champion, 2014 Sochi Plympic Silver medalist, 2009, 2013 World Champion, 2009 4CC Champion, 2006-7, 7-8, 9-10 Grand Prix Champion, 2006 World Junior Champion, 2005-6 Junior Grand Prix Champion</string>
    <string name="profile_records">&lt;b&gt;Personal Best Records: &lt;/b&gt; Combined Total 228.56(WR), SP 78.50(WR), FS 150.06(WR)</string>
    <string name="wiki_url">http://en.m.wikipedia.org/wiki/Yuna_kim</string>
    <string name="submenu_youtube_hot_news">How News</string>
    <string name="submenu_youtube_my_faves">My Faves</string>
    <string name="submenu_youtube_random">Random</string>
    <string name="submenu_youtube_greetings">Greetings</string>
    <string name="submenu_youtube_competitions">Competitions</string>
    <string name="submenu_youtube_iceshows">Ice Shows</string>
    <string name="submenu_youtube_offtheice">Off the Ice</string>
    <string name="submenu_youtube_knc">Kiss &amp; Cry</string>
    <string name="submenu_youtube_jukebox">Jukebox</string>
    <string name="submenu_youtube_muhan">Infinity Challenge</string>
    <string name="submenu_youtube_guru">Guru Show</string>
    <string name="download_title">How to download</string>
    <string name="random_title">Random YunaTube Play</string>
    <string name="random_desc">Do you want to watch this clip?</string>
    <string name="random_no">Something else!</string>
    <string name="submenu_links_official">Official Pages</string>
    <string name="submenu_links_official_desc">Websites run by AllThatSports</string>
    <string name="submenu_links_fan">Fan Pages</string>
    <string name="submenu_links_fan_desc">Websites run by Yuna\'s fans</string>
    <string name="submenu_links_figureskating">Figure Skating Sites</string>
    <string name="submenu_links_figureskating_desc">Figure Skating sites, forums</string>
    <string name="links_official_yunakim">Official Yuna Kim Website</string>
    <string name="links_official_yunakim_url">www.yunakim.com</string>
    <string name="links_official_yunakim_desc">Yuna\'s official website managed by her agency.</string>
    <string name="links_official_yunaaaa">Yuna\'s Twitter</string>
    <string name="links_official_yunaaaa_url">www.twitter.com/yunaaaa</string>
    <string name="links_official_yunaaaa_desc">Yuna\'s personal twitter account.</string>
    <string name="links_official_facebook">Authorized Facebook Page</string>
    <string name="links_official_facebook_url">www.facebook.com/pages/Yuna-Kim/53417067377</string>
</resources>