<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0c4c7a" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/submenu_links_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_back_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_links_official"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_links_official"
                    android:textAppearance="@style/superMenuItemText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_links_official_desc"
                    android:textAppearance="@style/superMenuDescriptionText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_links_fan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_links_fan"
                    android:textAppearance="@style/superMenuItemText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_links_fan_desc"
                    android:textAppearance="@style/superMenuDescriptionText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_links_figureskating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_bottom_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_links_figureskating"
                    android:textAppearance="@style/superMenuItemText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_links_figureskating_desc"
                    android:textAppearance="@style/superMenuDescriptionText" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>