<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0c4c7a" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/submenu_youtube_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_back_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_myclips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_myclips_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_youtube_my_faves"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_random"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_youtube_random"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_youtube_greetings"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_competitions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_youtube_competitions"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_iceshows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_youtube_iceshows"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_offtheice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_youtube_offtheice"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_knc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_youtube_knc"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_jukebox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submenu_youtube_jukebox"
                    android:textAppearance="@style/superMenuItemText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_muhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/tube_muhan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/youtube_muhan" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submenu_youtube_guru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submenu_menu_bottom_selector" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/tube_guru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/youtube_guru" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>